7 Jan price update
7 Jan price update

--- a/8-days-migration.html
+++ b/8-days-migration.html
@@ -241,7 +241,7 @@
           <div class="tph-contact">
             <div class="thp-price">
               <p>from</p>
-              <span class="price">$1880 </span>
+              <span class="price">$1980 </span>
               <p>per person</p>
             </div>
             <div class="info-item-btn">
@@ -259,10 +259,14 @@
       <div class="description-highlights-map">
         <div class="description-highlights">
           <div class="description">
-            <h3>拼團日期 一人也可以參加 （12人滿團） June 15-22</h3>
+            <h3>拼團資訊：</h3>
+            <h4>每團6-12人，一個人也可以參加，每人費用1980美金</h4>
+            <h4>日期：June15-22</h4>
           </div>
           <div class="description">
-            <h3>包團兩人以上成行 一年只有一次 June 15-22</h3>
+            <h3>私人訂製團：</h3>
+            <h4>2人以上可包團，詳情請 <a href="contact.html">@mail</a></h4>
+            <h4>日期：June15-22 （固定日期）</h4>
           </div>
           <div class="description">
             <h2>Description</h2>
@@ -274,26 +278,33 @@
             <h2>Highlights</h2>
 
             <ul class="highlights-ul">
-              <li>吉爾吉斯游牧遷徙亮點：</li>
-              <li>季節性遷徙：</li>
-              <li>
-                吉爾吉斯游牧民每年遷徙兩次：一次在六月春季（山上季節），一次在九月秋季。
-              </li>
-              <li>
-                遷徙對於牲畜至關重要，確保它們在夏季能獲得更好的放牧環境和較涼爽的氣溫。
-              </li>
-              <li>
-                高海拔牧場（如海拔約2000米的地區）為牲畜提供理想的放牧條件。
-              </li>
-              <li>春季遷徙到松庫爾湖：</li>
-              <li>家庭將牲畜和蒙古包遷往山間牧場。</li>
-              <li>這是一項真實的文化傳統，而非表演活動。</li>
-              <li>沉浸式體驗：</li>
-              <li>親眼見證游牧家庭的遷徙過程。</li>
-              <li>
-                有機會參與他們的旅程，幫助出發、搭建蒙古包，並與他們共進早餐和午餐。
-              </li>
-              <li>深入體驗吉爾吉斯游牧民的日常生活。</li>
+              <ul>
+                <li>季節性遷徙：</li>
+                <p>
+                  吉爾吉斯游牧民每年遷徙兩次：一次在六月春季（山上季節），一次在九月秋季。
+                </p>
+                <p>
+                  遷徙對於牲畜至關重要，確保它們在夏季能獲得更好的放牧環境和較涼爽的氣溫。
+                </p>
+                <p>
+                  高海拔牧場（如海拔約2000米的地區）為牲畜提供理想的放牧條件。
+                </p>
+              </ul>
+
+              <ul>
+                <li>春季遷徙到松庫爾湖：</li>
+                <p>家庭將牲畜和蒙古包遷往山間牧場。</p>
+                <p>這是一項真實的文化傳統，而非表演活動。</p>
+              </ul>
+
+              <ul>
+                <li>沉浸式體驗：</li>
+                <p>親眼見證游牧家庭的遷徙過程。</p>
+                <p>
+                  有機會參與他們的旅程，幫助出發、搭建蒙古包，並與他們共進早餐和午餐。
+                </p>
+                <p>深入體驗吉爾吉斯游牧民的日常生活。</p>
+              </ul>
             </ul>
           </div>
         </div>
@@ -845,7 +856,7 @@
                 - Transportation with a professional driver
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> - English-speaking
+                <i class="fa fa-check-square fa-lg"></i> - Chinese-speaking
                 guide during the tour
               </li>
               <li>
@@ -891,7 +902,7 @@
                   drivers)
                 </li>
                 <li>
-                  <i class="fa fa-times fa-lg"></i> - Single stay 25$ extra per
+                  <i class="fa fa-times fa-lg"></i> - Single bed 40$ extra per
                   night
                 </li>
               </ul>
@@ -910,7 +921,7 @@
                 餘額請抵達當地第一天交付美元現金給導遊。
               </li>
 
-              <li>包團會安排一次免費接送機服務。</li>
+              <li>拼團和私人訂製團皆含一次接送機服務</li>
 
               <li>
                 台灣護照要申請簽證， 請告知出發的日期。簽證效期一個月。<br />
@@ -931,7 +942,7 @@
 
               <li>
                 本行程可延長住宿天數， 代訂Bishkek Freedom Hotel <br />
-                一晚雙床房70美金。 建議提早一天到。可以休息一下也能市區bazaar
+                一晚雙床房 $80美金。 建議提早一天到。可以休息一下也能市區bazaar
                 <br />
                 逛逛， 隔天開始充實的七天行程， <br />
                 行程最後一天，約傍晚5-7點結束會送大家回飯店休息， <br />
