--- a/classic-eight-days.html
+++ b/classic-eight-days.html
@@ -261,7 +261,7 @@
           <div class="tph-contact">
             <div class="thp-price">
               <p>from</p>
-              <span class="price">$1880 </span>
+              <span class="price">$1920 </span>
               <p>per person</p>
             </div>
             <div class="info-item-btn">
@@ -279,18 +279,14 @@
       <div class="description-highlights-map">
         <div class="description-highlights">
           <div class="description">
-            <h3>
-              拼團日期 一人也可以參加 （12人滿團） May 25 /July 5/ Aug 5/ Sep1
-            </h3>
+            <h3>拼團資訊：</h3>
+            <h4>每團6-12人，一個人也可以參加，每人費用1920美金</h4>
+            <h4>日期：May 25 / July 5 / Aug 5 / Sep1</h4>
           </div>
           <div class="description">
-            <h3>包團兩人以上成行，隨時出發 日期 May 25-Sep15</h3>
-          </div>
-          <div class="description">
-            <h2>Description</h2>
-            <p>
-              深入體驗吉爾吉斯的豐富文化與壯麗景觀。感受蒙古包生活、傳統手工藝、獵鷹技藝，並探索松庫爾湖、伊塞克湖及傑提奧古茲峽谷等絕美景點。享受徒步旅行、溫泉泡浴及湖畔靜謐時光，結合冒險、文化與放鬆，締造難忘的旅程。
-            </p>
+            <h3>私人訂製團：</h3>
+            <h4>2人以上可包團，詳情請 <a href="contact.html">@mail</a></h4>
+            <h4>日期: May 25-Sep15 隨時出發</h4>
           </div>
           <div class="highlights">
             <h2>Highlights</h2>
@@ -833,7 +829,7 @@
                 - Transportation with a professional driver
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> - English-speaking
+                <i class="fa fa-check-square fa-lg"></i> - Chinese-speaking
                 guide during the tour
               </li>
               <li>
@@ -879,7 +875,7 @@
                   drivers)
                 </li>
                 <li>
-                  <i class="fa fa-times fa-lg"></i> - Single stay 25$ extra per
+                  <i class="fa fa-times fa-lg"></i> - Single stay 40$ extra per
                   night
                 </li>
               </ul>
@@ -898,7 +894,7 @@
                 餘額請抵達當地第一天交付美元現金給導遊。
               </li>
 
-              <li>包團會安排一次免費接送機服務。</li>
+              <li>拼團和私人訂製團皆含一次接送機服務</li>
 
               <li>
                 台灣護照要申請簽證， 請告知出發的日期。簽證效期一個月。<br />
@@ -919,7 +915,7 @@
 
               <li>
                 本行程可延長住宿天數， 代訂Bishkek Freedom Hotel <br />
-                一晚雙床房70美金。 建議提早一天到。可以休息一下也能市區bazaar
+                一晚雙床房 80美金。 建議提早一天到。可以休息一下也能市區bazaar
                 <br />
                 逛逛， 隔天開始充實的七天行程， <br />
                 行程最後一天，約傍晚5-7點結束會送大家回飯店休息， <br />
