--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -214,7 +214,7 @@
           <div class="tph-contact">
             <div class="thp-price">
               <p>from</p>
-              <span class="price">$1880 </span>
+              <span class="price">$1680 </span>
               <p>per person</p>
             </div>
             <div class="info-item-btn">
@@ -232,27 +232,16 @@
       <div class="description-highlights-map">
         <div class="description-highlights">
           <div class="description">
-            <h3>
-              拼團日期 一人也可以參加 （12人滿團） April 28 / May 12 <br />
-            </h3>
+            <h3>拼團資訊：</h3>
+            <h4>每團6-12人，一個人也可以參加，每人費用1680 美金</h4>
+            <h4>日期：April 28/ May 12</h4>
           </div>
           <div class="description">
-            <h3>包團兩人以上成行，隨時出發 日期 April 28 - June 5</h3>
+            <h3>私人訂製團：</h3>
+            <h4>2人以上可包團，詳情請 <a href="contact.html">@mail</a></h4>
+            <h4>日期：April 20-May 30 隨時出發</h4>
           </div>
-          <div class="description">
-            <h2>Description</h2>
-            <p>
-              Embark on a thrilling 7-day adventure in Kyrgyzstan! Capture
-              stunning photographs of majestic mountains adorned with vibrant
-              poppy flowers, witness traditional eagle hunting displays, and
-              explore scenic trails surrounded by breathtaking landscapes. Relax
-              in natural hot springs, sleep in cozy yurts under star-filled
-              skies, and create handmade felt carpets with local artisans. Savor
-              delicious Kyrgyz cuisine in awe-inspiring settings. Experience the
-              best of Kyrgyzstan's nature, culture, and charm on this
-              unforgettable tour!
-            </p>
-          </div>
+
           <div class="highlights">
             <h2>Highlights</h2>
             <ul class="highlights-ul">
@@ -803,7 +792,7 @@
                   drivers)
                 </li>
                 <li>
-                  <i class="fa fa-times fa-lg"></i> - Single stay 25$ extra per
+                  <i class="fa fa-times fa-lg"></i> - Single stay 40$ extra per
                   night
                 </li>
               </ul>
@@ -822,7 +811,7 @@
                 餘額請抵達當地第一天交付美元現金給導遊。
               </li>
 
-              <li>包團會安排一次免費接送機服務。</li>
+              <li>拼團和私人訂製團皆含一次接送機服務</li>
 
               <li>
                 台灣護照要申請簽證， 請告知出發的日期。簽證效期一個月。<br />
@@ -843,7 +832,7 @@
 
               <li>
                 本行程可延長住宿天數， 代訂Bishkek Freedom Hotel <br />
-                一晚雙床房70美金。 建議提早一天到。可以休息一下也能市區bazaar
+                一晚雙床房 80美金。 建議提早一天到。可以休息一下也能市區bazaar
                 <br />
                 逛逛， 隔天開始充實的七天行程， <br />
                 行程最後一天，約傍晚5-7點結束會送大家回飯店休息， <br />
