Uz update 14 Jan
Uz update 14 Jan

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="overnights.css" />
     <link rel="stylesheet" href="welcome-uz.css" />
     <link rel="stylesheet" href="other-tours.css" />
+    <link rel="stylesheet" href="our-partners.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
@@ -67,7 +68,7 @@
                   <a href="tours.html" class="dropdown-link">KYRGYZSTAN</a>
                 </li>
                 <li>
-                  <a href="uzbekstan.html" class="dropdown-link">UZBEKSTAN</a>
+                  <a href="6-d-UZ.html" class="dropdown-link">UZBEKSTAN</a>
                 </li>
               </ul>
             </li>
@@ -501,8 +502,8 @@
                 烏茲別克斯坦將成為我們的新旅遊目的地！2025年起，與我們一起探索這個充滿歷史與文化魅力的美麗國度。敬請期待！✨
               </p>
               <div class="about-uz-btn">
-                <a href="uzbekstan.html" class="red-hero-btn red-btn"
-                  >Coming soon</a
+                <a class="youtube-hero-btn" href="6-d-UZ.html" target="_blank"
+                  ><span>點入看行程</span></a
                 >
               </div>
             </div>
@@ -837,19 +838,48 @@
       </div>
     </section>
 
-    <!---------- more information Q&A ----------->
+    <!---------- Our Partners----------->
+    <section class="our-partners-section">
+      <div class="our-partners">
+        <h1>Our Partners</h1>
+        <div class="our-partners-description">
+          Everything is about relationships, but for us, it's about shared
+          passion and enjoying our mission together.
+        </div>
+
+        <div class="row">
+          <img src="bek-ruby-logo/BR-logo.png" alt="" />
+
+          <img src="bek-ruby-logo/nomadia-logo.png" alt="" />
+        </div>
+      </div>
+    </section>
 
     <!---------- Why Choose Us  ----------->
     <section class="why-us">
       <h1>為什麼選擇我們</h1>
       <div class="row">
         <div class="why-col">
-          <img loading="lazy" src="assets/Authentic Adventures 4x.png" alt="" />
+          <div class="why-col-img">
+            <img
+              loading="lazy"
+              src="assets/Authentic Adventures 4x.png"
+              alt=""
+            />
+          </div>
+
           <h3>Authentic Adventures</h3>
           <p>沉浸在吉爾吉斯獨特的遊牧文化中 蒙古包住宿和獵鷹表演等體驗。</p>
         </div>
         <div class="why-col">
-          <img loading="lazy" src="assets/Professional Guides 4x.png" alt="" />
+          <div class="why-col-img">
+            <img
+              loading="lazy"
+              src="assets/Professional Guides 4x.png"
+              alt=""
+            />
+          </div>
+
           <h3>Professional Guides</h3>
           <p>
             在經驗豐富的當地人士的指導下充滿信心地探索
@@ -857,11 +887,14 @@
           </p>
         </div>
         <div class="why-col">
-          <img
-            loading="lazy"
-            src="assets/Unforgettable Memories 4x.png"
-            alt=""
-          />
+          <div class="why-col-img">
+            <img
+              loading="lazy"
+              src="assets/Unforgettable Memories 4x.png"
+              alt=""
+            />
+          </div>
+
           <h3>Unforgettable Memories</h3>
           <p>
             當您發現未馴服的美麗時，與我們一起創造持久的回憶
@@ -879,16 +912,19 @@
         <div class="main-video">
           <div class="video">
             <iframe
-              src="https://www.youtube.com/embed/VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/MlfxCcTykg4?si=dDGk_UvFJJOKQ4TB"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
               allowfullscreen
             ></iframe>
             <h3 class="title"></h3>
             <a
               class="youtube-hero-btn"
-              href="https://www.youtube.com/channel/UCnxzzziyUQF2QUn3OG0KXCg"
+              href="https://youtu.be/MlfxCcTykg4"
               target="_blank"
               ><span>看更多影片</span></a
             >
