--- a/tours.html
+++ b/tours.html
@@ -58,6 +58,19 @@
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="index.html">HOME</a></li>
+
+            <!---------- new link ----------->
+            <li class="des-menu-item">
+              <a href="#" class="des-menu-link">Destination</a>
+              <ul class="dropdown">
+                <li>
+                  <a href="tours.html" class="dropdown-link">KYRGYZSTAN</a>
+                </li>
+                <li>
+                  <a href="6-d-UZ.html" class="dropdown-link">UZBEKSTAN</a>
+                </li>
+              </ul>
+            </li>
             <li><a href="tours.html">TOURS</a></li>
             <li><a href="blog.html">BLOG</a></li>
             <li>
